istio/redis-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: redis
  namespace: default
spec:
  host: redis.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
